# agentprobe

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  MANIFEST.in  PRD.md  README.md  RELEASE_CHECKLIST.md  TDD.md  hackhathon.md  package.json  pyproject.toml  tsconfig.json
.github/workflows/: android-cua.yml  browser-cua.yml  cua-android-app.yml  cua-chrome-extension.yml  cua-chrome-sync-login.yml  cua-chrome-webapp.yml  cua-dual-surface.yml  lint.yml
agentprobe/: __init__.py  __main__.py  actions.py  android.py  case.py  cli.py  client.py  grounding.py  judge.py  loop.py  prompts.py  pytest_plugin.py  recording.py
bench/: README.md  __init__.py  backends.yaml  report.py  run.py  test_bench.py
bench/cases/: chrome_navigate.py  settings_search.py
browser/: AGENTS.md  Dockerfile  README.md  package.json  runner.ts  setup-chrome-profile.sh
browser/cases/: cws-demo.ts  cws-viral-showcase.ts  full-showcase.ts  google-oauth.ts  install-auth-prompt.ts  viral-demo.ts
core/: blank-frame.ts  cdp.ts  chrome-process.ts  dialog.ts  interact.ts  paint.ts  recording.ts  screenshot.ts  terminal-process.ts  validate-video.ts  vision.ts  xdotool.ts
docs/: architecture.md  ci.md  quickstart.md  writing-cases.md
docs/nemoclaw/: proxy.py
examples/: android-settings.yaml  install-extension.yaml  open-weather.yaml
examples/android/: basic_smoke.py  calculator_math.py  network_drop.py  opencode-smoke.yaml  opencode_checks.py
examples/browser/: dialog-confirm-smoke.ts  install_auth.py
examples/dual-surface/: chrome-sync-login.ts  terminal-and-browser.ts
scripts/: build_demo_video.sh  make_holo_hero.py
tests/: test_case_loading.py  test_grounding.py  test_judge.py  test_reasoning_captions.py
(+15 files in other folders)
