[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentprobe"
version = "0.1.0"
description = "Test Android apps and browser extensions with a computer-use agent"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Dzianis Vashchuk"}]
requires-python = ">=3.10"
dependencies = ["openai>=1.0"]

[project.optional-dependencies]
browser = []

[project.scripts]
agentprobe = "agentprobe.cli:main"

[project.entry-points."pytest11"]
agentprobe = "agentprobe.pytest_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentprobe*"]
