[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentprobe"
version = "0.1.0"
description = "Test Android apps and browser extensions with a computer-use agent"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Dzianis Vashchuk"}]
requires-python = ">=3.10"
dependencies = ["openai>=1.0", "pyyaml>=6.0"]

[project.optional-dependencies]
# YAML test cases. The browser backend (browser/) is a Bun/TypeScript runner,
# not a pip package — it runs from a repo checkout; see docs/quickstart.md.
yaml = ["pyyaml>=6.0"]
# GIF overlays: add text captions showing agent reasoning to demo GIFs
gif-captions = ["Pillow>=10.0"]

[project.scripts]
agentprobe = "agentprobe.cli:main"

[project.entry-points."pytest11"]
agentprobe = "agentprobe.pytest_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentprobe*"]

[tool.setuptools.package-data]
agentprobe = ["../browser/**/*", "../browser/*"]
